--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,3 +21,14 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
+      - name: e2e setup
+        run: npx playwright install --with-deps
+      - name: e2e test
+        run: npm run test:e2e
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+        
