--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Output head commit's message
+        if: contains(github.event.head_commit.message, '#skip') 
         run: 'echo "${{ github.event.head_commit.message }}"'
   # simple_deployment_pipeline:
   #   runs-on: ubuntu-20.04
