--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Deployment pipeline
+name: Test & Deployment pipeline
 
 env:
   NO_SKIP: ${{ !contains(github.event.head_commit.message, '#skip') && github.event_name == 'push' }}
