--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,13 @@ jobs:
         run: echo "${{ contains(github.event.head_commit.message, '#skip') }}"
       - name: event
         run: echo "${{ github.event_name == 'push' }}"
+      - name: creating NO_SKIP
+        run: |
+          if [[ "${{ contains(github.event.head_commit.message, '#skip') }}" ]]; then
+            echo "NO_SKIP=true" >> $GITHUB_ENV
+          else
+            echo "NO_SKIP=false" >> $GITHUB_ENV
+          fi
       - name: NO_SKIP = 
         run: echo "${{ env.NO_SKIP }}"
   #     - name: install dependencies
