Continue checking the right condition

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,7 +24,7 @@ jobs:
         run: echo "${{ github.event_name == 'push' }}"
       - name: creating NO_SKIP
         run: |
-          if [[ "${{ contains(github.event.head_commit.message, '#skip') }}" ]]; then
+          if [[ "${{ contains(github.event.head_commit.message, '#skip') && github.event_name == 'push' }}" == "true" ]]; then
             echo "NO_SKIP=true" >> $GITHUB_ENV
           else
             echo "NO_SKIP=false" >> $GITHUB_ENV
