Continue updating condition

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,13 +15,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - name: contain
-        run: echo "${{ contains(github.event.head_commit.message, '#skip') }}"
+      - name: does not contain
+        run: echo "${{ !contains(github.event.head_commit.message, '#skip') }}"
       - name: event
         run: echo "${{ github.event_name == 'push' }}"
       - name: creating NO_SKIP
         run: |
-          if [[ "${{ contains(github.event.head_commit.message, '#skip') && github.event_name == 'push' }}" == "true" ]]; then
+          if [[ "${{ !contains(github.event.head_commit.message, '#skip') && github.event_name == 'push' }}" == "true" ]]; then
             echo "NO_SKIP=true" >> $GITHUB_ENV
           else
             echo "NO_SKIP=false" >> $GITHUB_ENV
