--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -54,11 +54,12 @@ jobs:
     env:
       DEPLOY_RELEASE_FLAG: ${{ !contains(github.event.head_commit.message, '#skip') && github.event_name == 'push' }}
     needs: [simple_deployment_pipeline]
-    if: ${{ github.ref == 'refs/heads/main' && github.env.DEPLOY_RELEASE_FLAG == 'true' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
       - name: Bump version and push tag
+        if: ${{ env.DEPLOY_RELEASE_FLAG == 'true' }}
         uses: anothrNick/github-tag-action@f278d49d30cdd8775cc3e7dd00b5ee11686ee297
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -66,6 +67,8 @@ jobs:
           PRERELEASE: true
           DEFAULT_BUMP: patch
       - name: Get new tag
+        if: ${{ env.DEPLOY_RELEASE_FLAG == 'true' }}
         run: 'echo "new_tag=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV'
       - name: Output new tag
+        if: ${{ env.DEPLOY_RELEASE_FLAG == 'true' }}
         run: 'echo "New Tag: ${{ env.new_tag }}"'
