--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,25 +9,14 @@ on:
     types: [opened, synchronize]
 jobs:
   simple_deployment_pipeline:
+    env: 
+      DEPLOY_FLAG: ${{ !contains(github.event.head_commit.message, '#skip') && github.event_name == 'push' }}
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - name: not contain "#skip"?
-        run: echo "${{ !contains(github.event.head_commit.message, '#skip') }}"
-      - name: push to main event?
-        run: echo "${{ github.event_name == 'push' }}"
-      - name: creating DEPLOY_RELEASE_FLAG
-        run: |
-          if [[ "${{ !contains(github.event.head_commit.message, '#skip') && github.event_name == 'push' }}" == "true" ]]; then
-            echo "DEPLOY_RELEASE_FLAG=true" >> $GITHUB_ENV
-          else
-            echo "DEPLOY_RELEASE_FLAG=false" >> $GITHUB_ENV
-          fi
-      - name: DEPLOY_RELEASE_FLAG = 
-        run: echo "${{ env.DEPLOY_RELEASE_FLAG }}"
       - name: install dependencies
         run: npm install
       - name: lint
@@ -47,19 +36,19 @@ jobs:
           path: playwright-report/
           retention-days: 30
       - name: Trigger Render deployment
-        if: ${{ env.DEPLOY_RELEASE_FLAG == 'true' }}
+        if: ${{ env.DEPLOY_FLAG == 'true' }}
         run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
     
   tag_release:
     env:
-      DEPLOY_RELEASE_FLAG: ${{ !contains(github.event.head_commit.message, '#skip') && github.event_name == 'push' }}
+      RELEASE_FLAG: ${{ !contains(github.event.head_commit.message, '#skip') && github.event_name == 'push' }}
     needs: [simple_deployment_pipeline]
     if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
       - name: Bump version and push tag
-        if: ${{ env.DEPLOY_RELEASE_FLAG == 'true' }}
+        if: ${{ env.RELEASE_FLAG == 'true' }}
         uses: anothrNick/github-tag-action@f278d49d30cdd8775cc3e7dd00b5ee11686ee297
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -67,8 +56,8 @@ jobs:
           PRERELEASE: true
           DEFAULT_BUMP: patch
       - name: Get new tag
-        if: ${{ env.DEPLOY_RELEASE_FLAG == 'true' }}
+        if: ${{ env.RELEASE_FLAG == 'true' }}
         run: 'echo "new_tag=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV'
       - name: Output new tag
-        if: ${{ env.DEPLOY_RELEASE_FLAG == 'true' }}
+        if: ${{ env.RELEASE_FLAG == 'true' }}
         run: 'echo "New Tag: ${{ env.new_tag }}"'
