Add discord webhook for notification
- Notify after successful deployment
- Notify after failed test / deploy / release

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,6 +38,20 @@ jobs:
       - name: Trigger Render deployment
         if: ${{ env.DEPLOY_FLAG == 'true' }}
         run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
+      - name: The job has succeeded
+        uses: rjstone/discord-webhook-notify@v1.0.4
+        if: ${{ env.DEPLOY_FLAG == 'true' && success() }}
+        with:
+          severity: info
+          details: Test Succeeded!
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Deploy Failed
+        uses: rjstone/discord-webhook-notify@v1.0.4
+        if: failure()
+        with:
+          severity: error
+          details: Test & Deploy Failed!
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
     
   tag_release:
     env:
@@ -61,3 +75,10 @@ jobs:
       - name: Output new tag
         if: ${{ env.RELEASE_FLAG == 'true' }}
         run: 'echo "New Tag: ${{ env.new_tag }}"'
+      - name: Release Failed
+        uses: rjstone/discord-webhook-notify@v1.0.4
+        if: failure()
+        with:
+          severity: error
+          details: Bumping The Tag Failed!
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
