Add configuration for the health-check job to run last

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -85,6 +85,7 @@ jobs:
           include_image: true
           username: GitHub PR Notifier
   health_check:
+    needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
     steps:
       - name: Check the deployed service URL
