--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -43,7 +43,8 @@ jobs:
         if: ${{ env.DEPLOY_FLAG == 'true' && success() }}
         with:
           webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
-          title: Pokedex - Test & Deploy Succeeded!
+          title: Pokedex Pipeline Notification
+          message: Test & Deploy Succeeded!
           include_image: true
           username: GitHub PR Notifier
       - name: Discord Notify - Failure
@@ -51,7 +52,8 @@ jobs:
         if: failure()
         with:
           webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
-          title: Pokedex - Test & Deploy Failed!
+          title: Pokedex Pipeline Notification
+          message: "Test & Deploy Failed! Check this commit: ${{ github.sha}}"
           include_image: true
           username: GitHub PR Notifier
   tag_release:
@@ -82,6 +84,7 @@ jobs:
         with:
           webhook_url: ${{ secrets.DISCORD_WEBHOOK }}
           title: Pokedex - Versioning Failed!
+          message: "Test & Deploy Failed! Check this commit: ${{ github.sha}}"
           include_image: true
           username: GitHub PR Notifier
   health_check:
